test/fail_compilation/fail225.d
disabled until bug 4750 is fixed
//struct Struct { 
//        char* chptr; 
//}
//
//void main()
//{
//        char ch = 'd';
//        invariant Struct iStruct = {1, &ch};
//}

